home button spacing fixed

--- a/WebApp/css/SellerTerminalStyle.css
+++ b/WebApp/css/SellerTerminalStyle.css
@@ -35,7 +35,6 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 600px;
-    padding-bottom: 5px;
     margin-top: 85px;
 }
 
